# basic-avr

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
