[package]
name = "basic-avr"
version = "0.1.0"
edition = "2021"

[dependencies]
atmega-hal = { git = "https://github.com/Rahix/avr-hal.git", features = ["atmega328p"] }
avr-device = { version = "0.3.3", features = ["rt"] }
avr-hal-generic = { git = "https://github.com/Rahix/avr-hal.git" }
embedded-hal = "0.2.7"
nb = "0.1.3"
panic-halt = "0.2.0"
ufmt = "0.1.0"
void = { version = "1.0.2", default-features = false }

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"